# uptime-monitor

./: PLAN.md  README.md  README.ru.md  conftest.py  pyproject.toml
app/: config.py  crud.py  database.py  installation.py  main.py  models.py  schemas.py
app/monitor/: checker.py  scheduler.py
app/routers/: sites.py
tests/: test_database.py
